src/objects/ExpenditureItem__c.object
<CustomObject>
    <description>decommission this object.</description>
    <fields>
        <fullName>BillAmount__c</fullName>
        <label>Bill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillRateMultiplier__c</fullName>
        <label>Bill Rate Multiplier</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Title__c</fullName>
        <label>Billing Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeNumber__c</fullName>
        <label>Employee Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenditureItemDate__c</fullName>
        <label>Expenditure Item Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpenditureItemID__c</fullName>
        <externalId>true</externalId>
        <label>Expenditure Item ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpenditureOrg__c</fullName>
        <label>Expenditure Org</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpenditureType__c</fullName>
        <label>Expenditure Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceNum__c</fullName>
        <label>Invoice Num</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net0Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Net 0 Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProviderOrgID__c</fullName>
        <label>Provider Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceiverOrg__c</fullName>
        <label>Receiver Org</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordStatus__c</fullName>
        <description>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</description>
        <inlineHelpText>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</inlineHelpText>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>P</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RequestID__c</fullName>
        <label>Request ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferPriceFunctionalAmount__c</fullName>
        <label>Transfer Price Functional Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransferredFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transferred Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VendorNumber__c</fullName>
        <label>Vendor Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoucherNum__c</fullName>
        <label>Voucher Num</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>xxExpenditure Item</label>
    <nameField>
        <label>Expenditure Item ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>xxExpenditure Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>